# rust-ci-demo

./: .dockerignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  build.sh  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
.qoder/rules/: rules.md
crates/backend/: Cargo.toml
crates/backend/src/: lib.rs  main.rs
crates/frontend/: Cargo.toml  Trunk.toml  index.html
crates/frontend/src/: lib.rs  page.rs
src/: main.rs
