[package]
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7", features = ["web"] }
dioxus-router = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
name = "frontend"
path = "src/lib.rs"

[[bin]]
name = "app"
path = "src/main.rs"